# MyAllTest

./: README.md  build.gradle  dxb.jks  gradle.properties  settings.gradle
FFmpeg/FFmpeg5_1_2/: README.md  build.gradle
FFmpeg/FFmpeg5_1_2/src/main/cpp/: CMakeLists.txt  native-lib.cpp
allappindexes/app/: build.gradle
allappindexes/base64/: build.gradle
allappindexes/bestinfiniteloop/: build.gradle
allappindexes/coverbaidulangbottom/: build.gradle
allappindexes/keyboardimeoptions/: build.gradle
allappindexes/looknewaddfile2/: build.gradle
allappindexes/neteasemusicanimation/: build.gradle
animation/: build.gradle
animation/view_animation/: build.gradle
app/: build.gradle
appindexes/app/: build.gradle
appindexes/choosephoto/: build.gradle  proguard-rules.pro
appindexes/contactlist/: README.md  build.gradle
appindexes/coordinatorlayout/: build.gradle
binder/: build.gradle
buildSrc/: build.gradle
camera/: build.gradle
cameraxzxing/: build.gradle
consumerproducer/: build.gradle
custom_view/: README.md
custom_view/MyFlipView/: build.gradle
custom_view/OverScroller/: build.gradle
custom_view/countview/: build.gradle
custom_view/dialog/: build.gradle
custom_view/drawable/: build.gradle
custom_view/shadowview/: build.gradle
design_pattern/: build.gradle
draw_signing/: build.gradle
gradle_build/: build.gradle
ime/: build.gradle
intent/: build.gradle
io/: build.gradle
jetpack/data_binding/: build.gradle
jni/: build.gradle
kotlin-android-extensions1deprecated/: build.gradle
kotlin_grammer/: build.gradle
mindgraph/: Android.rp
mvp/: build.gradle
notifycation/: build.gradle
plugin/: build.gradle
recyclerview/: build.gradle
release_apk/: build.gradle
sensor/: build.gradle
touchevent/: build.gradle
view_binding/: build.gradle
viewpager2/: build.gradle
windowmanager/: build.gradle
(+679 files in other folders)
